# WiiScript

./: .gitignore  CMakeLists.txt  meta.xml
src/: main.cpp
src/core/: input_events.h
src/editor/: buffer.cpp  commands.h  cursor.cpp  editor.cpp  text.h
src/gfx/: drawing.h  font.cpp  font.h  text.h
src/keyboard/: config.h  keyCollection.cpp  keyCollection.h  keyboard.cpp  keyboard.h
src/platform/: fs.cpp  input.cpp  path.h  platform.h  time.cpp  wii_input.cpp  wii_platform.h  wii_time.cpp  wii_video.cpp
src/ui/: theme.cpp  theme.h  ui_root.cpp  ui_root.h
src/ui/widgets/: button.h  context_menu.h  label.h  layout.h  list.h  modal.h  panel.h  scrollbar.h  scrollbars.h  text_input.h  widget.h
